#21  EmotionAddFragment + EmotionAddViewModel + Hilt 연결

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">EmotionalDiary</string>
+    <string name="emotion_add_fragment_title">Emotion Add Fragment</string>
 </resources>
