--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="description_anger">anger</string>
     <string name="description_fear">fear</string>
     <string name="description_disgust">disgust</string>
+
+    <string name="write_diary_hint">그날의 감정에 대해 간략하게 입력해 주세요.</string>
 </resources>
